--- a/demo/js/inertia/resources/views/index.html
+++ b/demo/js/inertia/resources/views/index.html
@@ -5,17 +5,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- <title inertia>{{ config('app.name', 'Laravel') }}</title> -->
-        <title inertia> Gaythai </title>
+        <title inertia> {APP_NAME} </title>
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.bunny.net">
-        <link href="https://fonts.bunny.net/css?family=figtree:400,500,600&display=swap" rel="stylesheet" />        
+        <link href="https://fonts.bunny.net/css?family=figtree:400,500,600&display=swap" rel="stylesheet" />
+
         
-      <script type="module" crossorigin src="/js/inertia/assets/index-4f225351.js"></script>
-      <link rel="stylesheet" href="/js/inertia/assets/index-9bea8bcc.css">
+
+        <!-- Need to change dynamically -->
+        @inertiaHead
+        <!-- <script src="/resources/js/Pages/app.vue" type="module"></script> -->
+      <script type="module" crossorigin src="/js/inertia/js\\inertia/index-8efe470c.js"></script>
+      <link rel="modulepreload" crossorigin href="/js/inertia/js\\inertia/index.esm-eb830b99.js">
+      <link rel="stylesheet" href="/js/inertia/js\\inertia/index-179954eb.css">
     </head>
     <body class="font-sans antialiased">
-        <!-- need to change -->
+        @inertia
+        <!-- also Need to change dynamically -->
         <div id="app" data-page='{"component": "Welcome","props": {},"url": "/build/resources/views/index.html","version":"c32b8e4965f418ad16eaebba1d4e960f"}'></div>
     </body>
 </html>
