--- a/demo/js/inertia/resources/views/index.html
+++ b/demo/js/inertia/resources/views/index.html
@@ -16,13 +16,13 @@
         <!-- Need to change dynamically -->
         @inertiaHead
         <!-- <script src="/resources/js/Pages/app.vue" type="module"></script> -->
-      <script type="module" crossorigin src="/js/inertia/js\\inertia/index-8efe470c.js"></script>
+      <script type="module" crossorigin src="/js/inertia/js\\inertia/index-7fbffa12.js"></script>
       <link rel="modulepreload" crossorigin href="/js/inertia/js\\inertia/index.esm-eb830b99.js">
       <link rel="stylesheet" href="/js/inertia/js\\inertia/index-179954eb.css">
     </head>
     <body class="font-sans antialiased">
         @inertia
         <!-- also Need to change dynamically -->
-        <div id="app" data-page='{"component": "Welcome","props": {},"url": "/build/resources/views/index.html","version":"c32b8e4965f418ad16eaebba1d4e960f"}'></div>
+        <!-- <div id="app" data-page='{"component": "Welcome","props": {},"url": "/build/resources/views/index.html","version":"c32b8e4965f418ad16eaebba1d4e960f"}'></div> -->
     </body>
 </html>
