--- a/demo/resources/views/index.html
+++ b/demo/resources/views/index.html
@@ -20,6 +20,6 @@
     <body class="font-sans antialiased">
         @inertia
         <!-- also Need to change dynamically -->
-        <div id="app" data-page='{"component": "Welcome","props": {},"url": "/build/resources/views/index.html","version":"c32b8e4965f418ad16eaebba1d4e960f"}'></div>
+        <!-- <div id="app" data-page='{"component": "Welcome","props": {},"url": "/build/resources/views/index.html","version":"c32b8e4965f418ad16eaebba1d4e960f"}'></div> -->
     </body>
 </html>
