--- a/example/with_composer/resources/views/index.html
+++ b/example/with_composer/resources/views/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- <title inertia>{{ config('app.name', 'Laravel') }}</title> -->
-        <title inertia> {APP_NAME} </title>
+        <title inertia> Inertia </title>
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.bunny.net">
